# template-game

./: .gitignore  .gitmodules  README.md
.github/workflows/: template-game-build.yml
docs/: branch-protection.md
game/: Cargo.toml  foundation.game.toml
game/assets/: credits.json
game/assets/scenes/: bevy_splash.bsn  credits.bsn  gameplay_level.bsn  main_menu.bsn  options_menu.bsn  pause_menu.bsn  pixel_perfect_splash.bsn
game/src/: lib.rs  main.rs
game/src/scenes/: bevy_splash.rs  credits.rs  gameplay.rs  main_menu.rs  mod.rs  options_menu.rs  pause_menu.rs  pixel_perfect_splash.rs
game/tests/: bsn_asset_flow.rs
scripts/: build.cmd  foundation-game.cmd  package.cmd  run.cmd  validate.cmd
